[gd_scene load_steps=12 format=3 uid="uid://cwqagjob05nm4"]

[ext_resource type="Script" uid="uid://dfk2vj1i5tj2j" path="res://game/scripts/controllers/game_scene_controller.gd" id="1_controller"]
[ext_resource type="PackedScene" uid="uid://d3m4n5p6q7r8" path="res://game/scenes/hud.tscn" id="2_hud"]
[ext_resource type="Script" uid="uid://bp6kfotjn5ygi" path="res://game/scripts/views/grid_view.gd" id="3_grid_view"]
[ext_resource type="Script" uid="uid://kwh4mli3cutu" path="res://game/scripts/vfx/camera_shake.gd" id="4_camera_shake"]
[ext_resource type="Shader" uid="uid://cilao36orpacg" path="res://assets/shaders/plasma_fog.gdshader" id="5_plasma"]
[ext_resource type="Shader" uid="uid://dfibrrg77xqd0" path="res://assets/shaders/grid_lines.gdshader" id="6_grid_lines"]
[ext_resource type="Shader" uid="uid://buq1rlr3mcr1s" path="res://assets/shaders/floor_reveal.gdshader" id="7_floor_reveal"]

[sub_resource type="Environment" id="Environment_glow"]
background_mode = 3
glow_enabled = true
glow_levels/1 = 1.0
glow_levels/2 = 1.0
glow_levels/3 = 0.3
glow_levels/5 = 0.0
glow_intensity = 0.3
glow_strength = 0.5
glow_bloom = 0.3
glow_blend_mode = 0
glow_hdr_threshold = 0.8
glow_hdr_scale = 1.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_plasma"]
shader = ExtResource("5_plasma")
shader_parameter/bg_color = Color(0.02, 0.02, 0.04, 1)
shader_parameter/cloud_color = Color(0.05, 0.1, 0.15, 0.4)
shader_parameter/speed = 0.25
shader_parameter/tile_factor = 50.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_floor"]
shader = ExtResource("7_floor_reveal")
shader_parameter/floor_color = Color(0.08, 0.08, 0.1, 1)
shader_parameter/grid_size = 64.0
shader_parameter/light_sources = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/light_count = 0
shader_parameter/light_radius = 250.0
shader_parameter/light_falloff = 50.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_grid"]
shader = ExtResource("6_grid_lines")
shader_parameter/line_color = Color(0.4, 0.4, 0.4, 0.3)
shader_parameter/grid_size = 64.0
shader_parameter/line_thickness = 1.0
shader_parameter/light_sources = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/light_count = 0
shader_parameter/light_radius = 250.0
shader_parameter/light_falloff = 50.0

[node name="Main" type="Node2D"]
script = ExtResource("1_controller")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_glow")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("4_camera_shake")

[node name="BackgroundCanvas" type="CanvasLayer" parent="."]
layer = -2

[node name="BackgroundNode" type="Control" parent="BackgroundCanvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlasmaRect" type="ColorRect" parent="BackgroundCanvas/BackgroundNode"]
material = SubResource("ShaderMaterial_plasma")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="GridCanvas" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enabled = true

[node name="FloorRect" type="ColorRect" parent="GridCanvas"]
material = SubResource("ShaderMaterial_floor")
offset_left = -50000.0
offset_top = -50000.0
offset_right = 50000.0
offset_bottom = 50000.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="GridLines" type="ColorRect" parent="GridCanvas"]
light_mask = 2
material = SubResource("ShaderMaterial_grid")
offset_left = -50000.0
offset_top = -50000.0
offset_right = 50000.0
offset_bottom = 50000.0
mouse_filter = 2

[node name="GridView" type="Node2D" parent="."]
script = ExtResource("3_grid_view")

[node name="CoreVisual" type="Node2D" parent="GridView"]

[node name="HUD" parent="." instance=ExtResource("2_hud")]
